--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <script type="text/javascript" src="js/jquery.flexslider.js"></script>
 <script type="text/javascript" src="js/jquery.fancybox.pack.js"></script>
 <script type="text/javascript" src="js/jquery.isotope.min.js"></script>
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript" src="js/jquery.gmap.min.js"></script>
 <script type="text/javascript" src="js/simple.carousel.js"></script>
 <script type="text/javascript" src="js/custom.js"></script>
@@ -31,9 +31,9 @@
     <div id="logo"> </div>
     <ul class="socialicons">
       <li><a class="social-text">PROFILES</a></li>
-      <li><a href="http://facebook.com/mayurdhagiya" target="_blank" class="social-facebook"></a></li>
-      <li><a href="http://twitter.com/Official_MSD" target="_blank" class="social-twitter"></a></li>
-      <li><a href="http://in.linkedin.com/in/mayurdhagiya" target="_blank" class="social-in"></a></li>
+      <li><a href="https://facebook.com/mayurdhagiya" target="_blank" class="social-facebook"></a></li>
+      <li><a href="https://twitter.com/Official_MSD" target="_blank" class="social-twitter"></a></li>
+      <li><a href="https://in.linkedin.com/in/mayurdhagiya" target="_blank" class="social-in"></a></li>
       <li><a href="https://plus.google.com/107292950869276542610" target="_blank" class="social-googleplus"></a></li>
       <li><a href="skype:mayurdhagiya?chat" target="_self" class="social-skype"></a></li>
     </ul>
