--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <ul class="personal-info">
         <li>
           <label>Name</label>
-          <span>Mayur Dhagiya</span></li>
+          <span>Mayur S. Dhagiya</span></li>
         <li>
           <label>Birthday</label>
           <span>March 04, 1996</span></li>
